# serializer version: 1
# name: test_render_tree_snapshot
  '''
  Concepts (2)
  ├── [01e6b44ba385] Introduction
  │     Objective : Understand Introduction
  │     Spans     : p1-p1  chars 0-30
  │     Prereqs   : (none)
  └── [8ba47661dbda] Methods
        Objective : Understand Methods
        Spans     : p1-p1  chars 31-57
        Prereqs   : 01e6b44ba385
  
  '''
# ---
# name: test_run_inspect_stdout_snapshot
  '''
  Concepts (2)
  ├── [50ab6e68e977] Introduction
  │     Objective : Understand Introduction
  │     Spans     : p1-p1  chars 0-133
  │     Prereqs   : (none)
  └── [70229d621166] Methods
        Objective : Understand Methods
        Spans     : p1-p1  chars 134-267
        Prereqs   : 50ab6e68e977
  
  '''
# ---
